Add clear key button to API key section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <label for="api-key">API Key (Gemini):</label>
             <input type="password" id="api-key" placeholder="Pega tu clave de Google AI Studio aquí">
             <button id="save-key-btn">Guardar Clave</button>
+            <button id="clear-key-btn">Borrar Clave</button>
             <p id="key-status">Estado: ❌ No hay clave</p>
         </div>
 
