Upgrade v1.4: Rediseño UI a look 'Asistente AI' (adiós emoji, Inter font, burbujas modernas)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodrigo Digital</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div id="app-container">
         <header>
-            <h1>Rodrigo Digital 🤖</h1>
+            <h1>Rodrigo Digital_</h1>
             <p>Un clon digital self-hosted.</p>
         </header>
 
@@ -37,4 +39,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
